--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,6 +87,19 @@ jobs:
           path: coverage
           destination: coverage
 
+  push:
+    executor:
+      name: default
+    steps:
+      - checkout
+      - restore_bundle_cache
+      - run:
+          name: build gem
+          command: gem build kuberails.gemspec
+      - store_artifacts:
+          path: kuberails-*.gem
+          destination: packages
+
 
 workflows:
   build_and_test:
@@ -98,4 +111,8 @@ workflows:
       - rspec:
           requires:
             - rubocop
+      - push:
+          requires:
+            - rspec
+
 
