--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,30 @@ jobs:
       - run: bundle install --jobs=4 --retry=3 --deployment
       - save_bundle_cache
 
+  rspec:
+    executor:
+      name: default
+    parallelism: 1
+    steps:
+      - checkout
+      - restore_bundle_cache
+      - run: mkdir /tmp/test-results /tmp/artifacts
+      - run: bundle install --deployment
+      - run:
+          name: run tests
+          command: |
+            TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)"
+            bundle exec rspec \
+              --format RspecJunitFormatter --out /tmp/test-results/rspec.xml \
+              --format html --out /tmp/artifacts/rspec.html \
+              --format progress \
+              $TEST_FILES
+      - store_test_results:
+          path: /tmp/test-results
+      - store_artifacts:
+          path: /tmp/artifacts
+          destination: rspec
+
   push:
     executor:
       name: default
@@ -56,8 +80,10 @@ workflows:
   build_and_test:
     jobs:
       - bundler
-      - push:
+      - rspec:
           requires:
             - bundler
-
+      - push:
+          requires:
+            - rspec
 
