--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -52,9 +52,14 @@ Style/StringLiterals:
 RSpec/ContextWording:
   Enabled: false
 
+RSpec/EmptyExampleGroup:
+  Exclude:
+    - 'spec/controllers/kuberails/application_controller_spec.rb'
+
 RSpec/FilePath:
   Exclude:
     - 'spec/lib/kuberails/errors/*'
 
 RSpec/NestedGroups:
   Enabled: false
+
